[project]
name = "my_history"
version = "0.1.0"
description = "Read parquet make df cnt command"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
cnt = 'my_history.cli:cnt'

[tool.pdm]
distribution = true
